# delaware-name-checker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
